--- a/css/style_main.css
+++ b/css/style_main.css
@@ -195,3 +195,126 @@ nav ul li a {
     align-self: center;
     text-align: center;
 }
+
+/*Estilização da area institucional*/
+#institutional {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #76b897;
+    margin: 30px 0 20px 0;
+}
+
+#section_intitutional_video {
+    display: flex;
+    
+    width: 80%;
+    height: 300px;
+
+}
+
+/*Estilização da area de prizes*/
+#prizes {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 280px;
+    background-color: #ffffff;
+    margin-top: 40px;
+}
+
+#prizes h2 {
+    width: 100%;
+    padding: 20px;
+    background-color: #CF8E55;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+#prizes_figure {
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    
+}
+
+#prizes_figure figure {
+    width: 30%;
+    height: 80px;
+}
+
+/*Estilização da area de rodapé*/ 
+footer {
+    display: flex;
+    flex-direction: column;
+    border-top: 2px solid rgb(129, 128, 128);
+}
+
+#footer_sub{
+    display: flex;
+    flex-direction: row;
+}
+
+#logo_baseborad {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+}
+
+#logo_baseborad img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+#map_website{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #76b897;
+    margin: 40px 0 10px 0;
+    padding: 60px 40px;
+}
+
+#map_left {
+    width: 50%;
+}
+
+#map_left ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    float: left;
+
+}
+
+#map_left ul li {
+    display: block;
+    text-decoration: none;
+    padding: 10px;
+}
+
+#map_left ul li a {
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+}
+
+#map_right{
+    width: 50%;
+}
+
+#map_right ul li{
+    text-decoration: none;
+}
+
+#dev {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+}
