--- a/css/style_main.css
+++ b/css/style_main.css
@@ -114,6 +114,7 @@ nav ul li a {
     width: 100%;
     align-items: center;
     color: #000000;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 
