--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -186,15 +186,24 @@ p{
     width: 25%;
     background-color: #CF8E55;
     padding: 15px;
-    
+    display: flex;
+    flex-direction: column;
+    border-radius: 2px;
 }
 
 .apresentacao h2{
     font-family: 'Rancho', 'Cookie', 'Harrington';
 }
 
+.apresentacao figure{
+    display: flex;
+    justify-content: center;
+}
+
 .img_artigo {
     width: 90%;
+    height: 30vh;
+    border-radius: 6px;
 }
 
 .apresentacao h2{
