--- a/assets/css/departamentos.css
+++ b/assets/css/departamentos.css
@@ -19,6 +19,7 @@
     width: 100%;
     background-color: #CF8E55;
     text-indent: 20px;
+    border-top: 30px solid #CF8E55;
 }
 
 .invernadas-top h2, .campeiro-top h2{
@@ -27,7 +28,7 @@
     text-transform: uppercase;
     color: #CF8E55;
     background-color: white;
-    padding: 10px 0 20px 0;
+    padding: 30px 0 20px 0;
     font-family: Rancho, Cookie, Harrington;
 }
 
@@ -116,6 +117,7 @@
 .galery{
     display: grid;
     width: 100%;
+    background-color: #76b897;
 }
 
 .galery h3{
